# light-novel-converter

./: .gitignore  README.md  convert.py  pyproject.toml  requirements-dev.txt  requirements.txt
epub_tw_converter/: __init__.py  cli.py  converter.py  documents.py  errors.py  index.py  interactive.py  models.py  text.py  xml_utils.py
tests/: conftest.py  test_converter.py  test_documents.py  test_interactive.py
